--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="jumbotron masthead">
     <div class="container">
       <h1>Twitter Bootstrap Form Helpers</h1>
-      <p class="lead">Extend Bootstrap's components—now with 12 custom jQuery plugins.</p>
+      <p class="lead">Extend Twitter Bootstrap—now with 12 custom jQuery plugins.</p>
       <p><a href="https://github.com/vlamanna/BootstrapFormHelpers/zipball/master" class="btn btn-primary btn-large">Download Bootstrap Form Helpers</a></p>
       <ul class="masthead-links">
         <li><a href="http://github.com/vlamanna/BootstrapFormHelpers">GitHub project</a></li>
