--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./">Bootstrap Form Helpers</a>
+          <a class="brand" href="./">Twitter Bootstrap Form Helpers</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active">
