--- a/select.html
+++ b/select.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Select jQuery plugin for Twitter Bootstrap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extend Twitter Bootstrap's with Bootstrap Form Helpers Select jQuery plugins.">
+    <meta name="description" content="Extend Twitter Bootstrap with Bootstrap Form Helpers Select jQuery plugins.">
     <meta name="author" content="Vincent Lamanna">
 
     <link rel="canonical" href="http://bootstrapformhelpers.com/select"/>
