--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
         <li>
           <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vlamanna&amp;repo=BootstrapFormHelpers&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width: 98px; height: 20px;"></iframe>
         </li>
-        <li class="follow-btn">
-<!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style ">
-<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-<a class="addthis_button_tweet"></a>
-<a class="addthis_button_pinterest_pinit"></a>
-<a class="addthis_counter addthis_pill_style"></a>
-</div>
-<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4df14df26c87e5bd"></script>
-<!-- AddThis Button END -->
+        <li style="height:15px;">
+          <!-- AddThis Button BEGIN -->
+          <div class="addthis_toolbox addthis_default_style ">
+          <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+          <a class="addthis_button_tweet"></a>
+          <a class="addthis_button_pinterest_pinit"></a>
+          <a class="addthis_counter addthis_pill_style"></a>
+          </div>
+          <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+          <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4df14df26c87e5bd"></script>
+          <!-- AddThis Button END -->
         </li>
       </ul>
     </div>
